# Aerugo

./: .dockerignore  .env  .gitignore  CONFIGURATION_MIGRATION_SUMMARY.md  Cargo.toml  Dockerfile.aerugo  Dockerfile.fresh-test  Dockerfile.simple  Dockerfile.step-by-step  ERRORS_FIXED_SUCCESS.md  IMPLEMENTATION_ISSUES.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  ROADMAP.md  RUN_GUIDE.sh  TEST_STATUS_SUMMARY.md  architecture-status.sh  build.rs  clear_manifests.py  deploy-production.sh  docker-compose.full-architecture.yml  nginx-lb.conf  pyproject.toml  runtest.sh  start.sh  test.txt  test_delete.py  test_docker_registry_v2.py  test_repository_api.sh
.github/ISSUE_TEMPLATE/: implementation.md
.github/workflows/: README.md  cd.yml  ci.yml  dependencies.yml  release.yml  security.yml
.sqlx/: query-00000000000000000000000000000000.json  query-113590494346eee94cbb04831303b53cda462aa267ca50fb97cd90ea19f755eb.json  query-2120e8fba26c39da20f64f9c472164626afe8db513b17894d8dddb8dd03a4ae9.json  query-277942b02694cf944d6f327cb3ca20fe18818a970a1af982198be5581d695e42.json  query-47a522faf85351452029d93376b6b510067182bd91f1550f35a622cf5bbd8e87.json  query-68b36156c7b98d16efe88a3513758434d208c0668b9c2ca160f7348a054f473c.json  query-6c3fda4ba9e2905eaf684eda1d7ecf05a5233c1e1f3a654e28f89bd4a5dc1de4.json  query-8c2b8de54405ace2acc08acca389336668867e3ea1ad75b64ebccfed8d12ab52.json  query-a06da6e9c32ffbcdb37ecc1ea9c635c70f054cd5f3758cfb957d95da4f81906b.json  query-d2e23fe2ae222f66b09aefea408d55f52f1ad9101241ccbf196041546f56bf36.json  query-d7f5af87011533a50dc66c9ac116d93e6d61060a5f8c1759fa661972a22a0c41.json  query-d81f0ab314887ae9bac5d028558de5e86778b3444c44b1d4d3caf762a0988e1d.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-f84663f62176df406d39c810fc1ba9453be5257d3d2e0fd9f44d349d1ac64eb1.json  query-f8bcc2ed643fb2685361558f7a7621eb3ee241831cd9b6a4bb553f3950607dac.json  query-ffba5eb390f7b70ec57a562ee390086e485b9e3600299474be5585789d00f5a1.json
app/Fe-AI-Decenter/: .gitignore  App.tsx  config.ts  index.html  package-lock.json  package.json  tsconfig.json  types.ts  vite-env.d.ts  vite.config.ts
app/Fe-AI-Decenter/components/: Button.tsx  Input.tsx  LoginForm.tsx  Modal.tsx  RegisterForm.tsx
app/Fe-AI-Decenter/pages/: AuthPage.tsx  DocsPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  RepositoriesPage.tsx  ResetPasswordPage.tsx  VerifyOtpPage.tsx
app/Fe-AI-Decenter/services/: api.ts
config/: .env.example  default.yml
docs/: API_DOCUMENTATION_GUIDE.md  ENVIRONMENT_CONFIGURATION.md
examples/: test_config.rs
migrations/: 20250908000001_create_users_table.sql  20250909000002_create_organizations_table.sql  20250909000003_create_organization_members_table.sql  20250909000004_create_organization_invitations_table.sql  20250909000005_create_repositories_table.sql  20250909000006_create_container_metadata_tables.sql  20250909000007_create_permission_tables.sql  20250909000008_create_repository_permissions_table.sql  20250913000009_create_teams_and_images_tables.sql  20250913000010_add_created_by_to_repositories.sql  20250915000014_create_simple_blob_uploads.sql  20250916000011_create_repository_permissions_table.sql  20250918000015_add_organization_registry_auth.sql  20250919000016_add_manifest_content.sql  20250923000017_create_api_keys_table.sql
scripts/: README.md  create_issues.sh  dev.sh  setup-dev-env.sh
src/: auth.rs  cache.rs  db.rs  email.rs  lib.rs  main.rs  openapi.rs
src/config/: mod.rs  production.rs  settings.rs  settings.rs.new
src/database/: models.rs  queries.rs
src/handlers/: auth.rs  docker_auth.rs  docker_registry_v2.rs  docker_registry_v2_optimized.rs  docker_registry_v2_tests.rs  health.rs  mod.rs  organizations.rs  registry.rs  repositories.rs  repositories_simple.rs  storage.rs  uploads.rs
src/models/: api_key.rs  image.rs  mod.rs  organization.rs  organizations.rs  repository.rs  repository_with_org.rs  user.rs
src/routes/: api.rs  auth.rs  docker_registry_v2.rs  docker_registry_v2_optimized.rs  health.rs  mod.rs  organizations.rs  registry.rs  repositories.rs  storage.rs
src/storage/: filesystem.rs  mod.rs  s3.rs  s3.rs.new
tests/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  base_test.py  config.py  config_test.rs  conftest.py  docker_registry_compatibility.py  integration_test.py  pytest.ini  pytest_integration.py  pytest_runner.py  quick_fix_orgs.py  requirements.txt  run_all_tests.py  run_complete_e2e_tests.sh  run_e2e_docker_tests.sh  run_performance_tests.sh  run_tests.sh  test_auth.py  test_auth_cache_compile.rs  test_cache.py  test_cache_pytest.py  test_complete_apis.py  test_database_storage.py  test_database_storage_pytest.py  test_different_manifests.py  test_docker_push_workflow.py  test_docker_s3_apis.py  test_e2e_docker_registry.py  test_health.py  test_mock_runner.py  test_organizations.py  test_repositories.py  test_s3_storage.rs  test_s3_storage_python.py  test_storage.rs  test_storage_python.py  test_users.py  utils.rs
(+24 files in other folders)
