[package]
name = "aerugo"
version = "0.1.0"
edition = "2021"
authors = ["buihaigiap"]
description = "A next-generation, distributed, and multi-tenant container registry"
license = "Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-sdk-s3 = "1.3"
aws-config = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
url = { version = "2.4", features = ["serde"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
thiserror = "1.0"
