[package]
name = "aerugo"
version = "0.1.0"
edition = "2021"
authors = ["buihaigiap"]
description = "A next-generation, distributed, and multi-tenant container registry"
license = "Apache-2.0"
default-run = "aerugo"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-sdk-s3 = "1.9"
aws-config = { version = "1.0.1", features = ["rustls"] }
aws-smithy-runtime = { version = "1.1.1" }
aws-smithy-runtime-api = "1.1.1"
aws-smithy-types = "1.1.1"
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0"
utoipa = { version = "4.2", features = ["chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
utoipa-axum = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
url = { version = "2.4", features = ["serde"] }
envy = "0.4"

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.6", features = ["serde", "v4"] }
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9.2"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"

# Added for storage implementation
async-trait = "0.1"
bytes = "1.4"
futures = "0.3"
base64 = "0.21"
bcrypt = "0.15"
tokio-util = { version = "0.7", features = ["io"] }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
tokio-stream = "0.1.17"

# Performance optimization dependencies
redis = { version = "0.24", features = [
    "tokio-comp",
    "connection-manager",
    "script",
] }
moka = { version = "0.12", features = ["future"] }
metrics = "0.22"
metrics-prometheus = "0.6"
bb8-redis = "0.14"
indexmap = "2.11.1"

# Email dependencies
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }
